<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LearnToWriteActivity">

    <include
        android:id="@+id/subHeader"
        layout="@layout/subpage_header"/>

    <ImageView
        android:id="@+id/exampleImageView"
        android:layout_marginTop="8dp"
        android:layout_width="350dp"
        android:layout_height="240dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/gif_description"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <ProgressBar
        android:id="@+id/imageViewProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/exampleImageView"
        app:layout_constraintStart_toStartOf="@id/exampleImageView"
        app:layout_constraintEnd_toEndOf="@id/exampleImageView"
        app:layout_constraintBottom_toBottomOf="@id/exampleImageView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/writeBelowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_below"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/exampleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.divyanshu.draw.widget.DrawView
        android:id="@+id/drawView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/writeBelowTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"/>

    <Button
        android:id="@+id/checkMaterialButton"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:text="@string/check"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/grey"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/drawView"
        app:layout_constraintStart_toStartOf="@id/drawView"/>

    <Button
        android:id="@+id/clearMaterialButton"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:text="@string/clear"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/grey"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/drawView"
        app:layout_constraintEnd_toEndOf="@id/drawView"
        app:layout_constraintBaseline_toBaselineOf="@id/checkMaterialButton"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>