<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LearnToReadActivity">

    <include
        android:id="@+id/subHeader"
        layout="@layout/subpage_header"/>

    <ImageView
        android:id="@+id/exampleImageView"
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/gif_description"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <ProgressBar
        android:id="@+id/imageViewProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/exampleImageView"
        app:layout_constraintStart_toStartOf="@id/exampleImageView"
        app:layout_constraintEnd_toEndOf="@id/exampleImageView"
        app:layout_constraintBottom_toBottomOf="@id/exampleImageView"
        tools:visibility="visible" />

    <com.dicoding.callysta.view.ui.WaveformView
        android:id="@+id/wavefromView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exampleImageView"
        app:layout_constraintBottom_toTopOf="@+id/tvInstruction"/>


    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec_instruction"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/llBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/checkMaterialButton"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/btnRec"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/ic_mic"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_play"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/checkMaterialButton"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/check"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="50dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />



</androidx.constraintlayout.widget.ConstraintLayout>